Revision history for Perl extension Bread::Board

0.04
    
    * t/
        - fixing the plans so that new versions of 
          Test::More stop complaining

0.03 Tues. Jan. 8, 2008
    * Bread::Board::Service::WithParameters
      - fixed the parameter validation to 
        use a custom cache key, this is so 
        that it plays nicely with the new 
        MooseX::Params::Validate
        - added tests for this

0.02 Tues. Jan. 8, 2008
    - forgot a dependency, whoops.

0.01 Mon. Jan. 7, 2008
    - Out with the old (IOC) and in 
      with the new (Bread::Board)