@@ -14,43 +14,41 @@ BEGIN {
 }
 
 my $c = Bread::Board::Container->new(
-    name => '/',
+    name           => 'Application',
     sub_containers => [
         Bread::Board::Container->new(
-            name           => 'Application',
-            sub_containers => [
-                Bread::Board::Container->new(
-                    name     => 'Model',
-                    services => [
-                        Bread::Board::Literal->new(name => 'dsn',  value => ''),
-                        Bread::Board::ConstructorInjection->new(
-                            name  => 'schema',
-                            class => 'My::App::Schema',
-                            dependencies => {
-                                dsn  => Bread::Board::Dependency->new(service_path => '../dsn'),
-                                user => Bread::Board::Literal->new(name => 'user', value => ''),
-                                pass => Bread::Board::Literal->new(name => 'pass', value => ''),
-                            },
-                        )
-                    ]
-                ),
-                Bread::Board::Container->new(
-                    name     => 'View',
-                    services => [
-                        Bread::Board::ConstructorInjection->new(
-                            name  => 'TT',
-                            class => 'My::App::View::TT',
-                            dependencies => {
-                                tt_include_path => Bread::Board::Literal->new(name => 'include_path',  value => []),
-                            },
-                        )
-                    ]
-                 ),
-                 Bread::Board::Container->new(name => 'Controller'),
+            name     => 'Model',
+            services => [
+                Bread::Board::Literal->new(name => 'dsn',  value => ''),
+                Bread::Board::ConstructorInjection->new(
+                    name  => 'schema',
+                    class => 'My::App::Schema',
+                    dependencies => {
+                        dsn  => Bread::Board::Dependency->new(service_path => '../dsn'),
+                        user => Bread::Board::Literal->new(name => 'user', value => ''),
+                        pass => Bread::Board::Literal->new(name => 'pass', value => ''),
+                    },
+                )
             ]
-        )
+        ),
+        Bread::Board::Container->new(
+            name     => 'View',
+            services => [
+                Bread::Board::ConstructorInjection->new(
+                    name  => 'TT',
+                    class => 'My::App::View::TT',
+                    dependencies => {
+                        tt_include_path => Bread::Board::Literal->new(name => 'include_path',  value => []),
+                    },
+                )
+            ]
+         ),
+         Bread::Board::Container->new(name => 'Controller'),
     ]
 );
+
+#use Bread::Board::Dumper;
+#diag(Bread::Board::Dumper->new->dump($c));
 
 my $model = $c->fetch('Application/Model');
 isa_ok($model, 'Bread::Board::Container');
@@ -76,12 +74,12 @@ is($dsn->service_path, '../dsn', '... got the right name');
     is($dsn, $dsn2, '... they are the same thing');
 }
 
-my $root = $model->fetch('../../');
+my $root = $model->fetch('../');
 isa_ok($root, 'Bread::Board::Container');
 
 is($root, $c, '... got the same container');
 
-is($model, $model->fetch('../../Application/Model'), '... navigated back to myself');
+is($model, $model->fetch('../Application/Model'), '... navigated back to myself');
 is($dsn, $model->fetch('../Model/schema/dsn'), '... navigated to dsn');
 
 is($model, $dsn->fetch('../../'), '... got the model from the dsn');
