@@ -1,10 +1,18 @@
 Revision history for Perl extension Bread::Board
 
 0.04
+    * Bread::Board
+      Bread::Board::Traversable
+      - fix root path handling (thanks to Daisuke Maki)
+        - added tests for this
+    
+    * Bread::Board::Dumper
+      - Simple utility for dumping containers
+        (thanks to Daisuke Maki)
     
     * t/
-        - fixing the plans so that new versions of 
-          Test::More stop complaining
+      - fixing the plans so that new versions of 
+        Test::More stop complaining
 
 0.03 Tues. Jan. 8, 2008
     * Bread::Board::Service::WithParameters
